Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32525

Server startup fails to validate invalid redirect_url

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Critical
    • Resolution: Fixed
    • 11.3(EOL)
    • N/A
    • Server
    • None

    Description

      Server does not allow to set invalid URL with SET GLOBAL statement, but this validation is not happening when we pass invalid URL in startup option.

      11.3.0-dbg>set global redirect_url="mariadbaaa://test";
      ERROR 1231 (42000): Variable 'redirect_url' can't be set to the value of 'mariadbaaa://test'
      11.3.0-dbg>
       
      11.3.0-dbg>set global redirect_url="mariadb://test:6666666";
      ERROR 1231 (42000): Variable 'redirect_url' can't be set to the value of 'mariadb://test:6666666'
      11.3.0-dbg>
      

      server startup command --redirect_url="mariadbaaa://test" or --redirect_url="mariadb://test:6666666"

      11.3.0-dbg>select @@redirect_url;
      +-------------------+
      | @@redirect_url    |
      +-------------------+
      | mariadbaaa://test |
      +-------------------+
      1 row in set (0.000 sec)
       
      11.3.0-dbg>
       
      11.3.0-dbg>select @@redirect_url;
      +------------------------+
      | @@redirect_url         |
      +------------------------+
      | mariadb://test:6666666 |
      +------------------------+
      1 row in set (0.000 sec)
       
      11.3.0-dbg>
      

      Attachments

        Issue Links

          Activity

            People

              ycp Yuchen Pei
              ramesh Ramesh Sivaraman
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3h 41m
                  3h 41m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.